# counterfactual-regret-minimization

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  CounterFactualRegretMinimizer.cpp  CounterFactualRegretMinimizer.h  CounterFactualRegretMinimizer2p.h  DiscardHoldemBucketer.cpp  DiscardHoldemBucketer.h  DiscardHoldemGameState.cpp  DiscardHoldemGameState.h  DiscardHoldemInformationSet.cpp  DiscardHoldemInformationSet.h  DiscardHoldemPayoutSet.cpp  DiscardHoldemPayoutSet.h  Game.h  KuhnPokerGame.cpp  KuhnPokerGame.h  KuhnPokerPayoutSet.cpp  KuhnPokerPayoutSet.h  ParallelTestPayoutSet.cpp  ParallelTestPayoutSet.h  PayoutMatrix.h  PayoutSet.cpp  PayoutSet.h  README.md  RPSGame.cpp  RPSGame.h  RPSPayoutSet.cpp  RPSPayoutSet.h  Random.cpp  Random.h  RegretMinimizer.cpp  RegretMinimizer.h  TicTacToePayoutMatrix.cpp  main.cpp
RegretMinimization/: PayoutMatrix.cpp  Random.h  RegretMinimizer.cpp  TicTacToePayoutMatrix.h
